Danmakus: replace LinkedList with ArrayList